--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
@@ -38,6 +38,8 @@
   <target name="clean">
     <delete dir="bin" />
     <delete dir="stage" />
+    <delete dir="dist" />
+    <delete file="sbmltestrunner.jar"/>
     <delete file="../testsuite-ui.jar"/>
   </target>
   <target depends="clean" name="cleanall">
