--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-core/.classpath
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-core/.classpath
@@ -3,5 +3,5 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="libs/simple-xml-2.6.4.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="build"/>
 </classpath>
