--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-core/build.xml
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-core/build.xml
@@ -8,15 +8,16 @@
 	<property name="target" value="1.5"/>
 	<property name="source" value="1.5"/>
 	<path id="core.classpath">
-		<pathelement location="bin"/>
+		<pathelement location="build"/>
 		<pathelement location="libs/simple-xml-2.6.4.jar" />
 	</path>
 	<target name="init">
 		<tstamp>
 			<format property="timestamp" pattern="yyyy-MM-dd HH:mm zzz"/>
 		</tstamp>		
-		<mkdir dir="bin"/>
-		<copy includeemptydirs="false" todir="bin">
+		<mkdir dir="build"/>
+		<mkdir dir="dist"/>
+		<copy includeemptydirs="false" todir="build">
 			<fileset dir="src">
 				<exclude name="**/*.launch"/>
 				<exclude name="**/*.java"/>
@@ -24,14 +25,15 @@
 		</copy>
 	</target>
 	<target name="clean">
-		<delete dir="bin"/>
-		<delete file="../testsuite-core.jar"/>
+		<delete dir="build"/>
+		<delete dir="dist"/>
+		<delete file="dist/testsuite-core.jar"/>
 	</target>
 	<target depends="clean" name="cleanall"/>
 	<target depends="build-subprojects,build-project" name="build"/>
 	<target name="build-subprojects"/>
 	<target depends="init" name="build-project">
-		<javac debug="true" debuglevel="${debuglevel}" destdir="bin"
+		<javac debug="true" debuglevel="${debuglevel}" destdir="build"
 			source="${source}" target="${target}" includeantruntime="no" >
 			<src path="src"/>
 			<classpath refid="core.classpath" />
@@ -54,7 +56,7 @@
 				<pathelement location="simple-xml-2.6.4.jar" />
 			</classpath>
 		</manifestclasspath>
-		<jar jarfile="testsuite-core.jar" destfile="../testsuite-core.jar">
+		<jar jarfile="testsuite-core.jar" destfile="dist/testsuite-core.jar">
 			<manifest>
 				<attribute name="Main-Class" value="org.sbml.testsuite.core.Main"/>
 				<attribute name="Class-Path" value="${manifest.cp}"/>
@@ -63,7 +65,7 @@
 				<attribute name="Built-Timestamp" value="${timestamp}" />
 				<attribute name="Built-By" value="${user.name}" />
 			</manifest>
-			<fileset dir="bin" includes="**/*.class"/>
+			<fileset dir="build" includes="**/*.class"/>
 			<fileset dir="src" includes="data/**/*"/>
 		</jar>
 	</target>
