Added -Xlint:unchecked to the javac arguments, to get unchecked operations flagged.

--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-core/build.xml
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-core/build.xml
@@ -37,6 +37,7 @@
 			source="${source}" target="${target}" includeantruntime="no" >
 			<src path="src"/>
 			<classpath refid="core.classpath" />
+                        <compilerarg value="-Xlint:unchecked"/>
 		</javac>
 	</target>
 	<target name="javadoc">
