Avoid making the menubar application name be "SBML Test Runner - Lion x64" on Mac OS.  It should be just "SBML Test Runner".

--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
@@ -322,6 +322,7 @@
     <jarbundler dir="${dist.dir}"
                 verbose="true"
                 name="${app.name} - ${os} ${bits}"
+                shortname="${app.name}"
                 mainclass="${app.main.class}"
                 bundleid="org.sbml.testsuite"
                 version="${app.version}"
@@ -350,6 +351,7 @@
     <jarbundler dir="${dist.dir}"
                 verbose="true"
                 name="${app.name} - ${os} ${bits}"
+                shortname="${app.name}"
                 mainclass="${app.main.class}"
                 bundleid="org.sbml.testsuite"
                 version="${app.version}"
