Missed a place where the name of the Mac 32-bit application needed to be updated for the change earlier today.

--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
@@ -502,7 +502,7 @@
     <exec executable="hdiutil">
       <arg value="create"/>
       <arg value="-srcfolder"/>
-      <arg value="${dist.dir}/${app.name} - ${os} x86.app"/>
+      <arg value="${dist.dir}/${app.name} - ${os}.app"/>
       <arg value="-srcfolder"/>
       <arg value="${dist.dir}/${app.name} - ${os} x64.app"/>
       <arg value="-volname"/>
