1. Made it create both 32- and 64-bit variants of installers for linux.  If the user is on a 64-bit linux system, but they don't have the 32-bit compatibility libraries installed, a 32-bit installer will fail even if the installer has both 32 and 64-bit binaries. So, really, we have to build separate installers for both 32 and 64 bit options.
2. Consolidated some common code for linux installer case.

--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
@@ -600,27 +600,25 @@
 
   <target name="dist-linux" depends="init">
     <antcall target="app-linux"/>
+    <antcall target="dist-linux-common">
+      <param name="dist.linux.action" value="linux"/>
+    </antcall>
+    <antcall target="dist-linux-common">
+      <param name="dist.linux.action" value="linux-x64"/>
+    </antcall>
+    <antcall target="dist-linux-common">
+      <param name="dist.linux.action" value="rpm"/>
+    </antcall>
+    <antcall target="dist-linux-common">
+      <param name="dist.linux.action" value="deb"/>
+    </antcall>
+  </target>
+
+  <target name="dist-linux-common">
     <exec executable="${installbuilder.dir}/bin/builder">
       <arg value="build"/>
       <arg value="dev/app-builders/linux/installbuilder-linux-config.xml"/>
-      <arg value="--setvars"/>
-      <arg value="basedir=${basedir}"/>
-      <arg value="project.outputDirectory=${dist.dir}"/>
-      <arg value="project.version=${app.version}"/>
-    </exec>
-    <exec executable="${installbuilder.dir}/bin/builder">
-      <arg value="build"/>
-      <arg value="dev/app-builders/linux/installbuilder-linux-config.xml"/>
-      <arg value="deb"/>
-      <arg value="--setvars"/>
-      <arg value="basedir=${basedir}"/>
-      <arg value="project.outputDirectory=${dist.dir}"/>
-      <arg value="project.version=${app.version}"/>
-    </exec>
-    <exec executable="${installbuilder.dir}/bin/builder">
-      <arg value="build"/>
-      <arg value="dev/app-builders/linux/installbuilder-linux-config.xml"/>
-      <arg value="rpm"/>
+      <arg value="${dist.linux.action}"/>
       <arg value="--setvars"/>
       <arg value="basedir=${basedir}"/>
       <arg value="project.outputDirectory=${dist.dir}"/>
