1. Changed how the jar file is created, such that the resource directory is first copied to the build directory, and then the jar constructor picks up all the files from there.  This makes it possibly to add build-time files  to the set that are put into the jar, without polluting the resource source directory.
2. Added a step to create a version-stamp file in the help directory, put into the build directory prior to creating the jar file.  The version stamp file makes it possible for the help viewer code to check that the version of the help files it may find already installed on a user's computer match the version of the Test Runner that's running.

3. Fixed the start-* targets; they were broken.

--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
@@ -234,6 +234,10 @@
   </target>
 
   <target name="jar-common" depends="build">
+    <copy todir="${build.dest}" overwrite="true">
+      <fileset dir="src" includes="org/sbml/testsuite/ui/resources/**" />
+    </copy>
+    <touch file="${build.dest}/org/sbml/testsuite/ui/resources/help/VERSION-${app.version}"/>
     <jar destfile="${dist.dir}/sbmltestrunner.jar">
       <manifest>
         <attribute name="Main-Class" value="${app.main.class}"/>
@@ -249,8 +253,7 @@
       <zipgroupfileset file="libs/org.swtchart_0.7.0.v20110128.jar"/>
       <zipgroupfileset file="libs/simple-xml-2.6.4.jar"/>
       <zipgroupfileset file="${swt.file}"/>
-      <fileset dir="${build.dest}" includes="**/*.class" />
-      <fileset dir="src" includes="org/sbml/testsuite/ui/resources/*" />
+      <fileset dir="${build.dest}" includes="**" />
     </jar>
   </target>
 
@@ -632,25 +635,25 @@
   <!-- =================================================================== -->
 
   <target name="start-win-32" depends="swt-win-32">
-    <java fork="true" jar="${build}/testsuite-ui.jar" />
+    <java fork="true" jar="${dist.dir}/sbmltestrunner.jar" />
   </target>
   <target name="start-win-64" depends="swt-win-64">
-    <java fork="true" jar="${build}/testsuite-ui.jar" />
+    <java fork="true" jar="${dist.dir}/sbmltestrunner.jar" />
   </target>
   <target name="start-linux-32" depends="swt-linux-32">
-    <java fork="true" jar="${build}/testsuite-ui.jar" />
+    <java fork="true" jar="${dist.dir}/sbmltestrunner.jar" />
   </target>
   <target name="start-linux-64" depends="swt-linux-64">
-    <java fork="true" jar="${build}/testsuite-ui.jar" />
+    <java fork="true" jar="${dist.dir}/sbmltestrunner.jar" />
   </target>
   <target name="start-osx-32" depends="swt-osx-32">
-    <java fork="true" jar="${build}/testsuite-ui.jar" >
+    <java fork="true" jar="${dist.dir}/sbmltestrunner.jar" >
       <arg value="-d32"/>
       <arg value="-XstartOnFirstThread"/>
     </java>
   </target>
   <target name="start-osx-64" depends="swt-osx-64">
-    <java fork="true" jar="${build}/testsuite-ui.jar">
+    <java fork="true" jar="${dist.dir}/sbmltestrunner.jar">
       <arg value="-XstartOnFirstThread"/>
       <arg value='-Xdock:name="${app.name}"'/>
     </java>
