--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
@@ -548,6 +548,8 @@
           tofile="${mountdir}/${app.name}/COPYING.txt" overwrite="true"/>
     <copy file="README.txt" 
           tofile="${mountdir}/${app.name}/README.txt" overwrite="true"/>
+    <copy file="NEWS.txt" 
+          tofile="${mountdir}/${app.name}/README.txt" overwrite="true"/>
 
     <!-- add a symbolic link to the Applications directory -->
     <symlink link="${mountdir}/${app.name}" resource="/Applications"/>
