Now putting the .cases-archive-date file into the cases/semantic directory, not just the top-level directory, so that the test runner can find it in the user's cached copy of the test suite.  (Owing to the way we separated the code that reads the test suite files in the runner, it's easier to do this than to find the root of the cases/semantic directory.)

--- a/trunk/test-suite/Makefile
+++ b/trunk/test-suite/Makefile
@@ -154,6 +154,8 @@ contents	= cases/semantic \
 
 cases-dist: html plots sedml tags-map
 	@echo $(today) > $(ts-file)
+	@echo $(today) > cases/semantic/$(ts-file)
+	@echo $(today) > cases/syntactic/$(ts-file)
 	make $(map-file)
 	zip -r $(cases-dist-name) $(contents) -x@.zipexcludes
 	@echo "---------------------------------------------------------------"
