Copy the original all-tags.txt file to the resources directory when we create a distribution.

--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build.xml
@@ -125,6 +125,9 @@
     <mkdir dir="${dist.dir}" />
     <mkdir dir="${build.dir}" />
     <mkdir dir="${build.dest}" />
+    <copy file="${app.tags.descriptions.file}"
+          todir="org/sbml/testsuite/ui/resources"
+          overwrite="true"/>
   </target>
 
   <target name="clean">
