Added configuration variable for the all-tags.txt file.

--- a/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build-defaults.properties
+++ b/trunk/test-suite/src/front-ends/new-standalone/testsuite-ui/build-defaults.properties
@@ -14,6 +14,7 @@ installbuilder.dir=/opt/installbuilder-8.5.2
 # below relative to the location of testsuite-ui.
 
 app.version.file=../../../../VERSION.txt
+app.tag.descriptions.file=../../../../docs/tags/all-tags.txt
 
 # The following should not normally need to be changed.
 
