- fix ant scripts

--- a/trunk/test-suite/src/front-ends/standalone/testsuite-ui/build-defaults.properties
+++ b/trunk/test-suite/src/front-ends/standalone/testsuite-ui/build-defaults.properties
@@ -13,8 +13,8 @@ installbuilder.dir=/opt/installbuilder-8.5.2
 # the entire SVN tree, then VERSION.txt will exist in the location given
 # below relative to the location of testsuite-ui.
 
-app.version.file=../../../../VERSION.txt
-app.tag.descriptions.file=../../../../docs/tags/all-tags.txt
+app.version.file=${basedir}/../../../../VERSION.txt
+app.tags.descriptions.file=${basedir}/../../../../docs/tags-documentation/all-tags.txt
 
 # The following should not normally need to be changed.
 
